# cmocking

./: .gitignore  CMakeLists.txt  README.md  UserInteraction.cpp  UserInteraction.h  main.cpp  test.cpp  test.h
